syntax = "proto3";

option go_package = "core/app/proto/pbEnum";

package enums;

enum AccountType {
  Regular = 0;
  Expense = 1;
  Debt = 2;
  Earnings = 3;
}

enum TransactionType {
  Transfer = 0;
  Consumption = 1;
  Balancing = 2;
  Income = 3;
}
